Always update assertion state for existing default network process https://bugs.webkit.org/show_bug.cgi?id=237965

Reviewed by Chris Dumez.

In our current implementation, we only update process assertion state for network process if it's being used by
some WebsiteDataStore. An problematic case with this impelmentation found by Tim: when a network process is
created for some WebsiteDataStore, and the WebsiteDataStore is gone (WebView gets destroyed), then network
process will get suspended. At this time, if a new WebsiteDataStore is created, some activities happen and we
update assertion state, we don't resume the network process, since it's not actively being used (the new
WebsiteDataStore has not invoked networkProcess() yet). Later on if the WebsiteDataStore starts to use network
process (it reuses existing process as network process is a singleton on Cocoa platforms), the network process
will be numb and not respond any message because it is suspended.

To fix this issue, let's always update assertion state for existing network process.

* UIProcess/WebProcessPool.cpp:
(WebKit::WebProcessPool::updateProcessAssertions):



Canonical link: https://commits.webkit.org/248514@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@291383 268f45cc-cd09-0410-ab3c-d52691b4dbfc